home-cluster/services/export/inadyn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inadyn
  namespace: export
  labels:
    app: inadyn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inadyn
  template:
    metadata:
      labels:
        app: inadyn
    spec:
      containers:
      - name: inadyn
        image: alpine:3.20
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 128Mi
        command:
        - "/bin/sh"
        - "-c"
        - |
          apk add inadyn
          echo "$${INADYN_CONFIG}" | sed "s/cloudflare-token/$${CF_DNS_API_TOKEN}/g" > /root/config.conf
          exec inadyn --foreground --no-pidfile -f /root/config.conf
