home-cluster/services/export/traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-wan
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik-wan
spec:
  type: LoadBalancer
  ports:
  - name: traefik
    port: 8444
    targetPort: 8444
    protocol: TCP
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik-dashboard
spec:
  type: ClusterIP
  ports:
  - name: traefik
    port: 9000
    targetPort: traefik
    protocol: TCP
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "cert-zhaohai-li-dns"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - "zhaohai.li"
    - "*.zhaohai.li"
    secretName: tls-zhaohai-li-ingress-dns
  rules:
  - host: gateway-p.zhaohai.li
    http:
      paths:
      - path: /dashboard/
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            port:
              number: 9000
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            port:
              number: 9000
